styles/login.css
#loginBody {
    width: 275px;
    margin: 0;
}

#loginNotice {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: center;
}

#loginPanel {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: auto;
    border: 1px solid black;
    border-radius: 4px;
    padding: 10%;
    padding-top: 8%;
    padding-bottom: 12%;
    width:100%;
}

#inputArea {
    justify-content: left;
}

#loginForm {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    justify-content: center;
}

#loginForm input {
    background-color: rgba(255, 255, 255, 0.6);
    border-style: 1px solid rgb(0, 0, 255);
}

#loginForm label {
    font-weight: bold;
}

#loginForm input[type="submit"] {
    justify-content: center;
    margin: auto;
    padding: 5px 15px;
    font-size: 100%;
    font-weight: bold;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: rgba(255, 255, 255, 0);
    border-radius: 6px;
    border: 1px solid rgb(0, 0, 255);
    box-shadow: 0px 2px 4px;
}

#loginForm input[type="submit"]:hover {
    color: black;
    background-color: rgba(255, 165, 0, .6);
}

#loginForm input[type="submit"]:active {
    box-shadow: 0px 0px 2px;
    transform: translateY(2px);
}

#loginForm input[type="text"] {
    border-radius: 2px;
    width: 75%;
    padding: 7px 5%;
    margin: 1% 6%;
}

#loginForm input[type="password"] {
    border-radius: 2px;
    width: 75%;
    padding: 7px 5%;
    margin: 1% 6%;
}

#showPasswordLabel label {
    font-weight: lighter;
    justify-content: flex-end;
}

#submitButton {
    display: flex;
    justify-content: center;
    margin:auto;
    align-items: center;
    
}

